[package]
name = "ezemuera-trans"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
name = "ezemuera_trans"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
eztrans-rs = { git = "https://github.com/Riey/eztrans-rs" }
serde = "1.0.102"
serde_json = "1.0.41"
serde_yaml = "0.8.11"
serde_derive = "1.0.102"
fxhash = "0.2.1"
encoding_rs = { version = "0.8.20", features = ["simd-accel", "fast-legacy-encode"] }
rmp-serde = "0.14.0"
twoway = "0.2.1"

